# 10k_parser

./: .gitignore  README.md  pyproject.toml
webview10k/: __init__.py  __main__.py  config.py
webview10k/static/js/: finance.js  pdf.js
webview10k/templates/: base.html  dashboard.html  index.html  uploads.html
webview10k/utils/: pdf_processor.py
webview10k/views/: api_bp.py  main_bp.py
