[project]
name = "10k-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "David Vigh", email = "david@davidvigh.com"}]
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask[async]>=3.1.0",
    "logfire[flask]>=3.5.3",
    "pdfplumber>=0.11.5",
    "pymupdf>=1.25.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["webview10k"]